fix: (column styles) hide horizontal scroll

--- a/frontend/src/styles/components/_column.scss
+++ b/frontend/src/styles/components/_column.scss
@@ -62,7 +62,8 @@
     gap: $space-3;
     flex: 1 1 auto;
     min-height: 0;
-    overflow: auto;
+    overflow-y: auto;
+  overflow-x: hidden;
     position: relative;
     transition: background-color .15s ease, box-shadow .15s ease;
 
