--- a/frontend/src/styles/components/_task-card.scss
+++ b/frontend/src/styles/components/_task-card.scss
@@ -47,7 +47,6 @@
     margin-left: auto;
     cursor: grab;
     display: inline-block;
-    float: right;
     font-size: $fs-12;
     font-weight: $fw-500;
     color: $text;
